--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
     </pluginRepositories>
     <dependencies>
         <dependency>
+            <groupId>org.jahia.server</groupId>
+            <artifactId>jahia-impl</artifactId>
+            <version>6.6.0.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
 	        <groupId>org.apache.clerezza</groupId>
 	        <artifactId>rdf.core</artifactId>
             <version>0.12-incubating-SNAPSHOT</version>
