--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,12 @@
     <parent>
         <artifactId>jahia-modules</artifactId>
         <groupId>org.jahia.modules</groupId>
-        <version>6.6.0.0-SNAPSHOT</version>
+        <version>7.0.0.0-SNAPSHOT</version>
     </parent>
     <groupId>org.jahia.modules</groupId>
     <artifactId>autotagging</artifactId>
     <name>Jahia Auto Tagging</name>
-    <version>1.0-SNAPSHOT</version>    
+    <version>2.0.0-SNAPSHOT</version>    
     <packaging>war</packaging>
     <description>This is the custom module (Jahia Auto Tagging) for running on a Jahia server.</description>
     
@@ -93,15 +93,9 @@
     </pluginRepositories>
     <dependencies>
         <dependency>
-            <groupId>org.jahia.server</groupId>
-            <artifactId>jahia-impl</artifactId>
-            <version>6.6.0.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
 	        <groupId>org.apache.clerezza</groupId>
 	        <artifactId>rdf.core</artifactId>
-            <version>0.12-incubating-SNAPSHOT</version>
+            <version>0.12-incubating</version>
             <exclusions>
                 <exclusion>
                     <groupId>javax.activation</groupId>
@@ -132,7 +126,7 @@
         <dependency>
 	        <groupId>org.apache.clerezza</groupId>
 	        <artifactId>rdf.utils</artifactId>
-	        <version>0.13-incubating-SNAPSHOT</version>
+	        <version>0.13-incubating</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.clerezza</groupId>
@@ -147,7 +141,7 @@
         <dependency>                
         	<groupId>org.apache.clerezza</groupId>
 	        <artifactId>rdf.ontologies</artifactId>
-            <version>0.11-incubating-SNAPSHOT</version>
+            <version>0.11-incubating</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -158,7 +152,7 @@
         <dependency>
 	        <groupId>org.apache.clerezza</groupId>
 	        <artifactId>rdf.jena.parser</artifactId>
-	        <version>0.10-incubating-SNAPSHOT</version>
+	        <version>0.10-incubating</version>
 	        <!-- <scope>runtime</scope> -->
             <exclusions>
                 <exclusion>
@@ -182,7 +176,7 @@
         <dependency>
 	        <groupId>org.apache.clerezza</groupId>
 	        <artifactId>rdf.jena.serializer</artifactId>
-	        <version>0.9-incubating-SNAPSHOT</version>
+	        <version>0.9-incubating</version>
 	        <!-- <scope>runtime</scope> -->
 	        <exclusions>
 	            <exclusion>
@@ -195,7 +189,7 @@
 	    <dependency>
 		    <groupId>org.apache.stanbol</groupId>
 		    <artifactId>org.apache.stanbol.enhancer.servicesapi</artifactId>
-            <version>0.9.0-incubating-SNAPSHOT</version>
+            <version>0.9.0-incubating</version>
 	    </dependency>	
     </dependencies>    
     <build>
