--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
     <parent>
         <artifactId>jahia-modules</artifactId>
         <groupId>org.jahia.modules</groupId>
-        <version>7.0.0.0-SNAPSHOT</version>
+        <version>7.0.0.0</version>
     </parent>
     <groupId>org.jahia.modules</groupId>
     <artifactId>autotagging</artifactId>
