--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!--
     This file is part of Jahia, next-generation open source CMS:
     Jahia's next-generation, open source CMS stems from a widely acknowledged vision 
@@ -38,194 +39,156 @@
     If you are unsure which license is appropriate for your use, 
     please contact the sales department at sales@jahia.com.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>jahia-modules</artifactId>
-        <groupId>org.jahia.modules</groupId>
-        <version>7.0.0.0</version>
-    </parent>
-    <groupId>org.jahia.modules</groupId>
-    <artifactId>autotagging</artifactId>
-    <name>Jahia Auto Tagging</name>
-    <version>2.0.0-SNAPSHOT</version>    
-    <packaging>war</packaging>
-    <description>This is the custom module (Jahia Auto Tagging) for running on a Jahia server.</description>
-    
-    <repositories>
-        <repository>
-            <id>jahiaRepository</id>
-            <name>Jahia's Maven Repository</name>
-            <url>http://maven.jahia.org/maven2</url>
-        </repository>
-        <repository>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-            <id>clerezza-snapshots</id>
-            <name>Apache Snapshot Maven Repository</name>
-            <url>https://repository.apache.org/content/groups/snapshots</url>
-        </repository>
-        <repository>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-            <id>fortytwo-snapshots</id>
-            <name>fortytwo Snapshot Maven Repository</name>
-            <url>http://fortytwo.net/maven2</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>jahiaRepository</id>
-            <name>Jahia's Maven Repository</name>
-            <url>http://maven.jahia.org/maven2</url>
-        </pluginRepository>
-    </pluginRepositories>
-    <dependencies>
-        <dependency>
-	        <groupId>org.apache.clerezza</groupId>
-	        <artifactId>rdf.core</artifactId>
-            <version>0.12-incubating</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.activation</groupId>
-                    <artifactId>activation</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>commons-codec</groupId>
-                    <artifactId>commons-codec</artifactId>
-                </exclusion>                
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging-api</artifactId>
-                </exclusion>                
-                <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpcore</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.ibm.icu</groupId>
-                    <artifactId>icu4j</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>                
-            </exclusions>              
-        </dependency>
-        <dependency>
-	        <groupId>org.apache.clerezza</groupId>
-	        <artifactId>rdf.utils</artifactId>
-	        <version>0.13-incubating</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.apache.clerezza</groupId>
-                    <artifactId>rdf.core.test</artifactId>
-                </exclusion>         
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>      
-            </exclusions>	        
-        </dependency>
-        <dependency>                
-        	<groupId>org.apache.clerezza</groupId>
-	        <artifactId>rdf.ontologies</artifactId>
-            <version>0.11-incubating</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>               
-            </exclusions>	
-        </dependency>
-        <dependency>
-	        <groupId>org.apache.clerezza</groupId>
-	        <artifactId>rdf.jena.parser</artifactId>
-	        <version>0.10-incubating</version>
-	        <!-- <scope>runtime</scope> -->
-            <exclusions>
-                <exclusion>
-                    <groupId>com.ibm.icu</groupId>
-                    <artifactId>icu4j</artifactId>
-                </exclusion>
-                 <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-                 <exclusion>
-                    <groupId>xerces</groupId>
-                    <artifactId>xercesImpl</artifactId>
-                </exclusion>    
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>                                             
-            </exclusions>		        
-        </dependency>
-        <dependency>
-	        <groupId>org.apache.clerezza</groupId>
-	        <artifactId>rdf.jena.serializer</artifactId>
-	        <version>0.9-incubating</version>
-	        <!-- <scope>runtime</scope> -->
-	        <exclusions>
-	            <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-                                       
-	    <dependency>
-		    <groupId>org.apache.stanbol</groupId>
-		    <artifactId>org.apache.stanbol.enhancer.servicesapi</artifactId>
-            <version>0.9.0-incubating</version>
-	    </dependency>	
-    </dependencies>    
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>${war.plugin.version}</version>
-                <configuration>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
-                    <warSourceExcludes>resources/*.properties</warSourceExcludes>
-                    <webResources>
-                        <resource>
-                          <directory>${project.build.directory}/native2ascii</directory>
-                          <targetPath>resources</targetPath>
-                        </resource>
-                    </webResources>
-                    <archive>
-                        <manifestEntries>
-		                	<Implementation-Title>${project.name}</Implementation-Title>
-		                    <Implementation-Version>${project.version}</Implementation-Version>
-		                    <Implementation-Vendor></Implementation-Vendor>
-		                    <Implementation-Vendor-Id></Implementation-Vendor-Id>
-		                    <Implementation-URL></Implementation-URL>
-		                    <Specification-Title>${project.name}</Specification-Title>
-		                    <Specification-Version>${project.version}</Specification-Version>
-		                    <Specification-Vendor></Specification-Vendor>
-                            <package-name>${project.name}</package-name>
-                            <depends>Default Jahia Templates</depends>
-                            <root-folder>${artifactId}</root-folder>
-                            <module-type>module</module-type>
-                        </manifestEntries>
-                    </archive>
-                    <archiveClasses>true</archiveClasses>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/xsd/maven-4.0.0.xsd">  
+  <modelVersion>4.0.0</modelVersion>  
+  <parent> 
+    <artifactId>jahia-modules</artifactId>  
+    <groupId>org.jahia.modules</groupId>  
+    <version>7.0.0.0</version> 
+  </parent>  
+  <groupId>org.jahia.modules</groupId>  
+  <artifactId>autotagging</artifactId>  
+  <name>Jahia Auto Tagging</name>  
+  <version>2.0.0-SNAPSHOT</version>  
+  <packaging>bundle</packaging>  
+  <description>This is the custom module (Jahia Auto Tagging) for running on a Jahia server.</description>  
+  <repositories> 
+    <repository> 
+      <id>jahiaRepository</id>  
+      <name>Jahia's Maven Repository</name>  
+      <url>http://maven.jahia.org/maven2</url> 
+    </repository>  
+    <repository> 
+      <releases> 
+        <enabled>false</enabled> 
+      </releases>  
+      <snapshots> 
+        <enabled>true</enabled> 
+      </snapshots>  
+      <id>clerezza-snapshots</id>  
+      <name>Apache Snapshot Maven Repository</name>  
+      <url>https://repository.apache.org/content/groups/snapshots</url> 
+    </repository>  
+    <repository> 
+      <releases> 
+        <enabled>false</enabled> 
+      </releases>  
+      <snapshots> 
+        <enabled>true</enabled> 
+      </snapshots>  
+      <id>fortytwo-snapshots</id>  
+      <name>fortytwo Snapshot Maven Repository</name>  
+      <url>http://fortytwo.net/maven2</url> 
+    </repository> 
+  </repositories>  
+  <pluginRepositories> 
+    <pluginRepository> 
+      <id>jahiaRepository</id>  
+      <name>Jahia's Maven Repository</name>  
+      <url>http://maven.jahia.org/maven2</url> 
+    </pluginRepository> 
+  </pluginRepositories>  
+  <dependencies> 
+    <dependency> 
+      <groupId>org.apache.clerezza</groupId>  
+      <artifactId>rdf.core</artifactId>  
+      <version>0.12-incubating</version>  
+      <exclusions> 
+        <exclusion> 
+          <groupId>javax.activation</groupId>  
+          <artifactId>activation</artifactId> 
+        </exclusion>  
+        <exclusion> 
+          <groupId>commons-codec</groupId>  
+          <artifactId>commons-codec</artifactId> 
+        </exclusion>  
+        <exclusion> 
+          <groupId>commons-logging</groupId>  
+          <artifactId>commons-logging-api</artifactId> 
+        </exclusion>  
+        <exclusion> 
+          <groupId>org.apache.httpcomponents</groupId>  
+          <artifactId>httpcore</artifactId> 
+        </exclusion>  
+        <exclusion> 
+          <groupId>com.ibm.icu</groupId>  
+          <artifactId>icu4j</artifactId> 
+        </exclusion>  
+        <exclusion> 
+          <groupId>org.slf4j</groupId>  
+          <artifactId>slf4j-api</artifactId> 
+        </exclusion> 
+      </exclusions> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.apache.clerezza</groupId>  
+      <artifactId>rdf.utils</artifactId>  
+      <version>0.13-incubating</version>  
+      <exclusions> 
+        <exclusion> 
+          <groupId>org.apache.clerezza</groupId>  
+          <artifactId>rdf.core.test</artifactId> 
+        </exclusion>  
+        <exclusion> 
+          <groupId>org.slf4j</groupId>  
+          <artifactId>slf4j-api</artifactId> 
+        </exclusion> 
+      </exclusions> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.apache.clerezza</groupId>  
+      <artifactId>rdf.ontologies</artifactId>  
+      <version>0.11-incubating</version>  
+      <exclusions> 
+        <exclusion> 
+          <groupId>org.slf4j</groupId>  
+          <artifactId>slf4j-api</artifactId> 
+        </exclusion> 
+      </exclusions> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.apache.clerezza</groupId>  
+      <artifactId>rdf.jena.parser</artifactId>  
+      <version>0.10-incubating</version>  
+      <!-- <scope>runtime</scope> -->  
+      <exclusions> 
+        <exclusion> 
+          <groupId>com.ibm.icu</groupId>  
+          <artifactId>icu4j</artifactId> 
+        </exclusion>  
+        <exclusion> 
+          <groupId>log4j</groupId>  
+          <artifactId>log4j</artifactId> 
+        </exclusion>  
+        <exclusion> 
+          <groupId>xerces</groupId>  
+          <artifactId>xercesImpl</artifactId> 
+        </exclusion>  
+        <exclusion> 
+          <groupId>org.slf4j</groupId>  
+          <artifactId>slf4j-api</artifactId> 
+        </exclusion> 
+      </exclusions> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.apache.clerezza</groupId>  
+      <artifactId>rdf.jena.serializer</artifactId>  
+      <version>0.9-incubating</version>  
+      <!-- <scope>runtime</scope> -->  
+      <exclusions> 
+        <exclusion> 
+          <groupId>org.slf4j</groupId>  
+          <artifactId>slf4j-api</artifactId> 
+        </exclusion> 
+      </exclusions> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.apache.stanbol</groupId>  
+      <artifactId>org.apache.stanbol.enhancer.servicesapi</artifactId>  
+      <version>0.9.0-incubating</version> 
+    </dependency> 
+  </dependencies>  
+  <build> 
+    <plugins></plugins> 
+  </build> 
 </project>
